--- a/roboserver/templates/controller.html
+++ b/roboserver/templates/controller.html
@@ -29,28 +29,16 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <form onsubmit="submitForm()">
-                        <div class="form-group">
-                            <label for="name" class="big-label"><b>Name</b></label>
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Enter robot name">
-                        </div>
-                        <button type="button" onclick="submitForm()" class="btn btn-default">Submit</button>
-                    </form>
+                    <h1>{{ name }}</h1>
+                    <div class="row">
+                        <button style="width:100%;" class="btn btn-primary">Stop</button>
+                    </div> <br>
+                    <div class="row">
+                        <button style="width:100%;" class="btn btn-primary">Calibrate</button>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <script>
-            window.onload = function() {
-                $("form").submit(function(e) {
-                    e.preventDefault();//prevent the form from actually submitting
-                    window.location = "/controller/" + $("#name").val();
-                });
-            }
-            function submitForm () {
-                window.location = "/controller/" + $("#name").val();
-            }
-        </script>
-        <!-- <script src="/js/sensor.js"></script> -->
+        <script src="/js/sensor.js"></script>
     </body>
 </html>
