--- a/roboserver/templates/index.html
+++ b/roboserver/templates/index.html
@@ -17,8 +17,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
 
         <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-        <!-- <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css"> -->
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap&#45;theme.min.css"> -->
+        <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
 
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
