--- a/roboserver/templates/index.html
+++ b/roboserver/templates/index.html
@@ -25,7 +25,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
