--- a/roboserver/templates/index.html
+++ b/roboserver/templates/index.html
@@ -32,9 +32,9 @@
                     <form onsubmit="submitForm()">
                         <div class="form-group">
                             <label for="name" class="big-label"><b>Name</b></label>
-                            <input style="width: 120px" type="text" class="form-control" name="name" id="name" placeholder="Enter robot name">
+                            <input style="width: 100%;" type="text" class="form-control" name="name" id="name" placeholder="Enter robot name">
                         </div>
-                        <button type="button" onclick="submitForm()" class="btn btn-default">Submit</button>
+                        <button style="width: 100%;" type="button" onclick="submitForm()" class="btn btn-default">Submit</button>
                     </form>
                 </div>
             </div>
