--- a/roboserver/templates/index.html
+++ b/roboserver/templates/index.html
@@ -11,6 +11,8 @@
             }
         </style>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
         <link rel="shortcut icon" href="http://faviconist.com/icons/a4da5758b016ca4b8c17d78c77729759/favicon.ico"/>
 
         <!-- Latest compiled and minified CSS -->
