--- a/roboserver/templates/controller.html
+++ b/roboserver/templates/controller.html
@@ -11,6 +11,8 @@
             }
         </style>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
         <link rel="shortcut icon" href="http://faviconist.com/icons/a4da5758b016ca4b8c17d78c77729759/favicon.ico"/>
 
         <!-- Latest compiled and minified CSS -->
@@ -29,12 +31,12 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <h1>{{ name }}</h1>
+                    <h1 id="name">{{ name }}</h1>
                     <div class="row">
-                        <button style="width:100%;" class="btn btn-primary">Stop</button>
+                        <button onclick="stopButtonPressed()" id="stopButton" style="width:100%;" class="btn btn-primary">Start</button>
                     </div> <br>
                     <div class="row">
-                        <button style="width:100%;" class="btn btn-primary">Calibrate</button>
+                        <button onclick="calibrateButtonPressed()" id="calibrateButton" style="width:100%;" class="btn btn-primary">Calibrate</button>
                     </div>
                 </div>
             </div>
