--- a/roboserver/templates/index.html
+++ b/roboserver/templates/index.html
@@ -38,7 +38,7 @@
             window.onload = function() {
                 $("form").submit(function(e) {
                     e.preventDefault();
-                    window.location = "/queue/" + $("#name").val();
+                    window.location = "/controller/" + $("#name").val();
                 });
             }
         </script>
