--- a/roboserver/templates/sayer.html
+++ b/roboserver/templates/sayer.html
@@ -41,7 +41,7 @@
                 $("#say").click(function(e) {
                     $.ajax({
                         url: "/say/" + $("#name").html(),
-                        data: {words: $("#words").val()})
+                        data: {words: $("#words").val()}
                     })
                 });
             }
