--- a/roboserver/templates/controller.html
+++ b/roboserver/templates/controller.html
@@ -26,21 +26,11 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4">
-                    <h1 id="name">{{ name }}</h1>
-                    <div class="row">
-                        <button onclick="init()" id="initButton" style="width:100%;" class="btn btn-primary">Start</button>
-                    </div> <br>
-                    <canvas id="canvas" width="600" height="600" style="border:solid black 1px;">
-                        Your browser does not support canvas element.
-                    </canvas>
-                </div>
-            </div>
-        </div>
-        <script src="/js/sensor.js"></script>
+    <body onload="init()">
+        <div id="name" style="display:none">{{ name }}</div>
+    <canvas id="canvas" style="display:block;">
+        Your browser does not support canvas element.
+    </canvas>
+    <script src="/js/sensor.js"></script>
     </body>
 </html>
